# Diplom-CPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  config.ini  vcpkg-configuration.json  vcpkg.json
Crowler/: CMakeLists.txt  http_utils.cpp  link.h  main.cpp
Diplom_CPP/: CMakeLists.txt  Diplom_CPP.cpp  Diplom_CPP.h
Ini/: CMakeLists.txt  ini_file.cpp  ini_file.h
Server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
data/: CMakeLists.txt  data_base.cpp
